--- a/cw1/src/app/app.html
+++ b/cw1/src/app/app.html
@@ -1,4 +1,24 @@
 <h3>Komponent App</h3>
 <hr>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, harum perferendis delectus esse inventore itaque saepe ab, ducimus quibusdam natus et illum, sequi accusamus. Id quae quisquam quo reprehenderit quis.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, harum perferendis delectus esse inventore itaque
+  saepe ab, ducimus quibusdam natus et illum, sequi accusamus. Id quae quisquam quo reprehenderit quis.</p>
 <p>To jest drugi akapit</p>
+<hr>
+<div>
+  zmienna info:
+  <span style="text-decoration: underline;">
+    {{info}}
+  </span>
+</div>
+<div>
+  metoda showInfo():
+  <span style="text-decoration: underline; color: green;">
+    {{showInfo()}}
+  </span>
+</div>
+<div>
+  aktualna data i godzina: {{currentDate.toLocaleString()}}
+</div>
+<div>
+  suma {{number1}} + {{number2}} = {{number1 + number2}}
+</div>
