--- a/cw2/src/app/circle/circle.html
+++ b/cw2/src/app/circle/circle.html
@@ -1,1 +1,4 @@
-<div style="width: 50px;height: 50px;border: solid 1px black;border-radius: 50%;background-color: lightsalmon;"></div>
+<div 
+
+style="width: 50px;height: 50px;border: solid 1px black;border-radius: 50%;background-color: lightsalmon;"
+></div>
